--- a/packages/components/src/components/post-megadropdown-trigger/post-megadropdown-trigger.scss
+++ b/packages/components/src/components/post-megadropdown-trigger/post-megadropdown-trigger.scss
@@ -1,3 +1,5 @@
 post-megadropdown-trigger {
   width: 100%;
+  position: relative;
+  z-index: 4;
 }
