--- a/packages/components/src/components/post-megadropdown/post-megadropdown.scss
+++ b/packages/components/src/components/post-megadropdown/post-megadropdown.scss
@@ -44,12 +44,6 @@
   box-sizing: border-box;
 }
 
-post-megadropdown {
-  @include media.min(lg) {
-    overflow: hidden;
-  }
-}
-
 .megadropdown-container {
   --post-main-header-height: 56px;
   --post-global-header-height: 72px;
@@ -59,7 +53,7 @@ post-megadropdown {
 
   background-color: #fafafa;
   border: none;
-  z-index: -1;
+  z-index: 1;
   border-top: 1px solid #e1e0dc;
   width: 100%;
   top: 100%;
@@ -67,11 +61,11 @@ post-megadropdown {
   border-radius: 0;
 
   &.slide-in {
-    animation: slide-down 350ms forwards;
+    animation: slide-down 3500ms forwards;
   }
 
   &.slide-out {
-    animation: slide-up 350ms forwards;
+    animation: slide-up 3500ms forwards;
   }
 
   @include media.max(lg) {
